2006-03-30  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/pango-font.cc (pango_item_string_stencil): use
	scm_from_uint32 ()

	* mf/GNUmakefile ($(outdir)/emmentaler-%.otf
	$(outdir)/emmentaler-%.svg): remove canary.

	* lily/pango-font.cc (pango_item_string_stencil): only use uXXX
	glyphnames if we have a ttf font.

2006-03-30  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/advanced-notation.itely (Font selection):
	Corrected reference to the font-family-override.ly example.

2006-03-30  Joe Neeman  <joeneeman@gmail.com>
	
	* lily/chord-tremolo-engraver.cc (acknowledge_stem): set the
	stem-tremolo object in the stem (or else the stem might not be
	long enough).

2006-03-30  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/ttf.cc (print_trailer): only print existing glyphs.

2006-03-30  Joe Neeman  <joeneeman@gmail.com>

	* lily/stem-tremolo.cc (print): for whole notes (and breves, etc.)
	position the tremolo based on the position of the notehead.

	* input/regression/stem-tremolo.ly: add example of unbeamed eighth
	notes and update the texidoc line with the new positioning rules.
	
2006-03-30  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/ttf.cc (print_trailer): don't always use uXXX glyphname.

	* scripts/lilypond-book.py (Module): set default for linewidth if
	preamble not found.

2006-03-29  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION (PACKAGE_NAME): release 2.9.0.

	* input/regression/stem-tremolo-position.ly: new file.

	* lily/stem-tremolo.cc: remove Stem_tremolo::dim_callback

2006-03-28  Joe Neeman  <joeneeman@gmail.com>

	* lily/stem-tremolo.cc (print): position
	the tremolo depending only on the end of the stem
	and not on the notehead
	(raw_stencil): center, on the middle staff line, the
	flag that is closest to the end of the stem (previously
	the bottom flag)
	(calc_width): add this callback to shorten a tremolo when
	it is beamed or it is stemup with a flag
	(style): add this callback to make a tremolo rectangular when